Avoid corruption of inputSchemas of logicProcesses(with tests). Refactor of negativeUnfolding for Augmenter. Code cleanup.