@@ -1,38 +1,29 @@
 package edu.upc.mpi.logicschema;
 
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Implementation of a logic constraint. That is, a NormalClause  without head
  */
-public class LogicConstraint extends NormalClause{
-    private static int nextID = 1;                    
+public class LogicConstraint extends NormalClause {
+    private static int nextID = 1;
     private final int id;                             //ID
 
-    
+
     /**
      * Constructs a new Constraint using the list passed by parameter and the given id;
-     * 
-     * @param id
-     * @param literals
      */
-    public LogicConstraint(int id, List<Literal> literals){
+    public LogicConstraint(int id, List<Literal> literals) {
         super(literals);
         this.id = id;
-        
-        if(nextID <= id) nextID = id+1;
+
+        if (nextID <= id) nextID = id + 1;
     }
-    
+
     /**
      * Constructs a new Constraint using the list passed by parameter
-     * 
-     * @param literals
      */
-    public LogicConstraint(List<Literal> literals){
+    public LogicConstraint(List<Literal> literals) {
         super(literals);
         id = nextID++;
     }
@@ -42,16 +33,14 @@ public class LogicConstraint extends NormalClause{
      * This function will be removed
      */
     @Deprecated
-    public static void reset(){
+    public static void reset() {
         nextID = 1;
     }
 
     /**
      * Constructs a new Constraint using the id of c and the given literals
-     * @param c
-     * @param literals
      */
-    private LogicConstraint(LogicConstraint c, List<Literal> literals){
+    private LogicConstraint(LogicConstraint c, List<Literal> literals) {
         super(literals);
         this.id = c.id;
     }
@@ -59,24 +48,23 @@ public class LogicConstraint extends NormalClause{
     /**
      * @return the constraint identification number
      */
-    public int getID()
-    {
-            return id;
+    public int getID() {
+        return id;
     }
 
     @Override
     protected String getHeadAsString() {
-        return "  @"+id;
+        return "  @" + id;
     }
 
     @Override
     protected int hashCodeSpecific() {
-        return new Integer(this.id).hashCode();
+        return Integer.valueOf(this.id).hashCode();
     }
 
     @Override
     protected HashMap<String, String> getVariableToVariableSubstitutionForHead(NormalClause nc) {
-        return new HashMap<String, String>();
+        return new HashMap<>();
     }
 
     @Override
@@ -85,7 +73,6 @@ public class LogicConstraint extends NormalClause{
     }
 
     /**
-     *
      * @return a list containing a list of the different possibilities of unfolding the negated literals
      * of this. For such unfolding, the negated literals are interpreted as positive literals, and unfolded.
      * If the negated literals are base, this function just returns a list containing a list of the negated
@@ -93,46 +80,36 @@ public class LogicConstraint extends NormalClause{
      */
     @Deprecated
     public List<List<Literal>> getNegatedLiteralsUnfolded() {
-        List<List<Literal>> result = new LinkedList();
-        for(OrdinaryLiteral literal: this.getOrdinaryLiterals()){
-            if(literal.isNegated()){
-                result.addAll(new OrdinaryLiteral(literal, true).getUnfoldedLiteral(new HashSet()));
+        List<List<Literal>> result = new LinkedList<>();
+        for (OrdinaryLiteral literal : this.getOrdinaryLiterals()) {
+            if (literal.isNegated()) {
+                result.addAll(new OrdinaryLiteral(literal, true).getUnfoldedLiteral(new HashSet<>()));
             }
         }
         return result;
     }
 
     public Set<String> getPositivePredicateNames() {
-        Set<String> result = new HashSet();
-        for(OrdinaryLiteral literal: this.getPositiveOrdinaryLiterals()){
+        Set<String> result = new HashSet<>();
+        for (OrdinaryLiteral literal : this.getPositiveOrdinaryLiterals()) {
             result.add(literal.getPredicateName());
         }
         return result;
     }
 
     /**
-     *
-     * @param givenConstraint
      * @return whether this constraint is a subset of the given one
      */
     public boolean isSubsetOf(LogicConstraint givenConstraint) {
         return this.getVariableToVariableSubstitution(givenConstraint) != null;
     }
 
-   /**
-     *
-     * @param literals
+    /**
      * @return whether this constraint is a subset of the given literals list
      */
     public boolean isSubsetOf(List<Literal> literals) {
         LogicConstraint dumpConstraint = new LogicConstraint(literals);
         return this.isSubsetOf(dumpConstraint);
     }
-
-
-
-
-
-
 
 }
